load("@rules_rust//rust/private:rust.bzl", "rust_allocator_libraries")

rust_allocator_libraries(
    name = "allocator_libraries_with_mangling_support",
    allocator_library = "@rules_rust//ffi/rs/allocator_library",
    # FIXME: global_allocator_library
    visibility = ["//visibility:public"],
)

rust_allocator_libraries(
    name = "empty_allocator_libraries",
    visibility = ["//visibility:public"],
)

alias(
    name = "default_allocator_libraries",
    actual = select({
        "@rules_rust//rust/settings:experimental_use_allocator_libraries_with_mangled_symbols_on": ":allocator_libraries_with_mangling_support",
        "//conditions:default": ":empty_allocator_libraries",
    }),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "empty",
    visibility = ["//visibility:public"],
)

rust_allocator_libraries(
    name = "allocator_libraries_with_mangling_support_without_process_wrapper",
    allocator_library = "@rules_rust//ffi/rs/allocator_library:allocator_library_without_process_wrapper",
    # FIXME: global_allocator_library
    visibility = ["@rules_rust//util/process_wrapper:__subpackages__"],
)
