load("//rust:defs.bzl", "rust_test")

# buildifier: disable=bzl-visibility
load("//rust/private:rust.bzl", "rust_binary_without_process_wrapper")

rust_binary_without_process_wrapper(
    name = "process_wrapper",
    srcs = glob(["*.rs"]),
    # Stamping is not supported when building without process_wrapper:
    # https://github.com/bazelbuild/rules_rust/blob/8df4517d370b0c543a01ba38b63e1d5a4104b035/rust/private/rustc.bzl#L955
    stamp = 0,
    visibility = ["//visibility:public"],
)

rust_test(
    name = "process_wrapper_test",
    crate = ":process_wrapper",
)

filegroup(
    name = "distro",
    srcs = glob([
        "**/*.cc",
        "**/*.rs",
    ]) + [
        "BUILD.bazel",
    ],
    visibility = ["//:__subpackages__"],
)
