load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load(
    "@rules_rust//rust:defs.bzl",
    "rust_binary",
    "rust_library",
    "rust_shared_library",
    "rust_test",
)

rust_library(
    name = "rsdep",
    srcs = ["dep.rs"],
)

rust_test(
    name = "rstest",
    srcs = ["test.rs"],
    experimental_use_cc_common_link = 1,
    deps = [
        ":rsdep",
    ],
)

cc_test(
    name = "cctest",
    srcs = ["test.cc"],
    deps = [":rsdep"],
)
